package com.example.tanksgame.util;

public enum Color {
    BLUE,
    RED,
    GREEN,
    YELLOW,
    BLACK
}

